# roto-pong

./: .gitignore  CNAME  Cargo.toml  IDEAS.md  Makefile  PRD.md  README.md  Trunk.toml  index.html  sounds.html
.github/workflows/: ci.yml
src/: audio.rs  highscores.rs  lib.rs  main.rs  settings.rs
src/persistence/: mod.rs
src/platform/: mod.rs
src/renderer/: mod.rs  pipeline.rs  sdf_pipeline.rs  sdf_shader.wgsl  shader.wgsl  shapes.rs  test_shader.wgsl  vertex.rs
src/sim/: arc.rs  collision.rs  mod.rs  sdf.rs  state.rs  tick.rs
src/tuning/: mod.rs
src/ui/: mod.rs
